# along-pong

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json
client/: CMakeLists.txt  client.c  client.h  loop.c
client/frames/: CMakeLists.txt  enter_username.c  frames.h
client/net/: CMakeLists.txt  net.c  net.h  tcp.c
client/render/: CMakeLists.txt  circle.c  font.c  line.c  render.h  text.c
include/: CMakeLists.txt  macro.h
layout/: CMakeLists.txt  layout.c  layout.h
protocol/: CMakeLists.txt  buffer.c  callback.c  encode.c  parse.c  protocol.h
server/: CMakeLists.txt  server.c  server.h
server/net/: CMakeLists.txt  net.h  tcp.c  udp.c
