


# target_sources(
# 	frames
# 	PRIVATE
# 	enter_username.c
#
# 	# PUBLIC allows consumers of the library
# 	# to "see" the library's header files
# 	PUBLIC
# 	FILE_SET HEADERS
# 	FILES 
# 	frames.h
# )
#

# target_link_libraries(frames PRIVATE render)
#
# # # Link to the actual SDL3 library.
# target_link_libraries(
# 	frames
# 	PRIVATE 
# 	render
# )
#
#
